--- a/Construct-Services-DotNet-Class-Library.csproj
+++ b/Construct-Services-DotNet-Class-Library.csproj
@@ -102,5 +102,14 @@
       <Version>13.0.3</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ConstructServices.nuspec" />
+    <None Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="CHANGELOG" />
+    <Content Include="LICENSE.txt" />
+    <None Include="VERSION" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
