--- a/ConstructServices.nuspec
+++ b/ConstructServices.nuspec
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package >
   <metadata>
+	<readme>README.md</readme>
     <id>ConstructServices</id>
-    <version>1.0.5.0</version>
+    <version>1.0.6.0</version>
     <title>Construct.net Services</title>
     <authors>Thomas Gullen, Scirra Ltd</authors>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,4 +15,7 @@
     <copyright>Scirra Ltd</copyright>
     <tags>leaderboard leaderboards games gaming</tags>
   </metadata>
+	<files>
+		<file src="README.md" target="\" />
+	</files>
 </package>
