Add skelleton actions for Cloud Save

--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -82,6 +82,23 @@
     <Compile Include="Authentication\Responses\RegisterPlayerResponse.cs" />
     <Compile Include="Authentication\Responses\SignInPollResponse.cs" />
     <Compile Include="Authentication\Responses\SignInResponse.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\CreateRatingSlot.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\DeleteRatingSlot.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\EditRatingSlot.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\GetRatingSlots.cs" />
+    <Compile Include="CloudSave\Actions\DeletePicture.cs" />
+    <Compile Include="CloudSave\Actions\SetPicture.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\Create.cs" />
+    <Compile Include="CloudSave\Actions\Create.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\Delete.cs" />
+    <Compile Include="CloudSave\Actions\Delete.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\Edit.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\Get.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\GetCloudSaves.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\GetBuckets.cs" />
+    <Compile Include="CloudSave\Actions\Get.cs" />
+    <Compile Include="CloudSave\Actions\GetPlayerCloudSaves.cs" />
+    <Compile Include="CloudSave\Actions\Rate.cs" />
     <Compile Include="CloudSave\CloudSaveService.cs" />
     <Compile Include="CloudSave\Config.cs" />
     <Compile Include="CloudSave\Enums\GetBucketsSortMethod.cs" />
