Implement end points

--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -101,10 +101,13 @@
     <Compile Include="CloudSave\Actions\Rate.cs" />
     <Compile Include="CloudSave\CloudSaveService.cs" />
     <Compile Include="CloudSave\Config.cs" />
+    <Compile Include="CloudSave\Enums\GameBucketAccessMode.cs" />
     <Compile Include="CloudSave\Enums\GetBucketsSortMethod.cs" />
     <Compile Include="CloudSave\Enums\GetCloudSaveFilters.cs" />
     <Compile Include="CloudSave\Enums\GetCloudSavesMode.cs" />
     <Compile Include="CloudSave\Enums\GetCloudSavesOrderMethod.cs" />
+    <Compile Include="CloudSave\Objects\GameBucket.cs" />
+    <Compile Include="CloudSave\Responses\BucketResponse.cs" />
     <Compile Include="Common\BaseService.cs" />
     <Compile Include="Common\Functions.cs" />
     <Compile Include="Common\Pagination.cs" />
@@ -175,8 +178,6 @@
     <Content Include="LICENSE.txt" />
     <None Include="VERSION" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="CloudSave\Objects\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
