--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -108,6 +108,7 @@
     <Compile Include="CloudSave\Enums\GetCloudSavesOrderMethod.cs" />
     <Compile Include="CloudSave\Objects\GameBucket.cs" />
     <Compile Include="CloudSave\Responses\BucketResponse.cs" />
+    <Compile Include="CloudSave\Responses\BucketsResponse.cs" />
     <Compile Include="Common\BaseService.cs" />
     <Compile Include="Common\Functions.cs" />
     <Compile Include="Common\Pagination.cs" />
