Add new picturedata object to reduce param counts and enforce param constraints Implement create cloud save end point

--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Common\BaseService.cs" />
     <Compile Include="Common\Functions.cs" />
     <Compile Include="Common\Pagination.cs" />
+    <Compile Include="Common\PictureData.cs" />
     <Compile Include="Common\Request.cs" />
     <Compile Include="Common\Validators.cs" />
     <Compile Include="GlobalConfig.cs" />
