--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -81,10 +81,10 @@
     <Compile Include="Authentication\Responses\RegisterPlayerResponse.cs" />
     <Compile Include="Authentication\Responses\SignInPollResponse.cs" />
     <Compile Include="Authentication\Responses\SignInResponse.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\CreateRatingSlot.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\DeleteRatingSlot.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\CreateRatingDimension.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\DeleteRatingDimension.cs" />
     <Compile Include="CloudSave\Actions\GameBuckets\EditRatingSlot.cs" />
-    <Compile Include="CloudSave\Actions\GameBuckets\GetRatingSlots.cs" />
+    <Compile Include="CloudSave\Actions\GameBuckets\GetRatingDimensions.cs" />
     <Compile Include="CloudSave\Actions\DeletePicture.cs" />
     <Compile Include="CloudSave\Actions\GetBlobBytes.cs" />
     <Compile Include="CloudSave\Actions\SetPicture.cs" />
