--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Authentication\Responses\RegisterPlayerResponse.cs" />
     <Compile Include="Authentication\Responses\SignInPollResponse.cs" />
     <Compile Include="Authentication\Responses\SignInResponse.cs" />
+    <Compile Include="Broadcasts\BroadcastService.cs" />
+    <Compile Include="Broadcasts\Config.cs" />
     <Compile Include="CloudSave\Actions\GameBuckets\CreateRatingDimension.cs" />
     <Compile Include="CloudSave\Actions\GameBuckets\DeleteRatingDimension.cs" />
     <Compile Include="CloudSave\Actions\GameBuckets\EditRatingSlot.cs" />
