Implemented delete channel end point

--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Authentication\Responses\SignInPollResponse.cs" />
     <Compile Include="Authentication\Responses\SignInResponse.cs" />
     <Compile Include="Broadcasts\Actions\CreateChannel.cs" />
+    <Compile Include="Broadcasts\Actions\Delete.cs" />
     <Compile Include="Broadcasts\Actions\GetChannels.cs" />
     <Compile Include="Broadcasts\BroadcastService.cs" />
     <Compile Include="Broadcasts\Config.cs" />
