--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Broadcasts\Actions\Delete.cs" />
     <Compile Include="Broadcasts\Actions\GetChannel.cs" />
     <Compile Include="Broadcasts\Actions\GetChannels.cs" />
+    <Compile Include="Broadcasts\Actions\UpdateChannel.cs" />
     <Compile Include="Broadcasts\BroadcastService.cs" />
     <Compile Include="Broadcasts\Config.cs" />
     <Compile Include="Broadcasts\Objects\Channel.cs" />
