--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -82,18 +82,25 @@
     <Compile Include="Authentication\Responses\SignInPollResponse.cs" />
     <Compile Include="Authentication\Responses\SignInResponse.cs" />
     <Compile Include="Broadcasts\Actions\CreateChannel.cs" />
+    <Compile Include="Broadcasts\Actions\CreateMessage.cs" />
     <Compile Include="Broadcasts\Actions\Delete.cs" />
     <Compile Include="Broadcasts\Actions\EditRatingDimension.cs" />
     <Compile Include="Broadcasts\Actions\GetChannel.cs" />
     <Compile Include="Broadcasts\Actions\GetChannels.cs" />
+    <Compile Include="Broadcasts\Actions\GetMessage.cs" />
+    <Compile Include="Broadcasts\Actions\GetMessages.cs" />
     <Compile Include="Broadcasts\Actions\UpdateChannel.cs" />
+    <Compile Include="Broadcasts\Actions\UpdateMessage.cs" />
     <Compile Include="Broadcasts\BroadcastService.cs" />
     <Compile Include="Broadcasts\Config.cs" />
     <Compile Include="Broadcasts\Objects\Channel.cs" />
+    <Compile Include="Broadcasts\Objects\Message.cs" />
     <Compile Include="Broadcasts\Responses\ChannelResponse.cs" />
     <Compile Include="Broadcasts\Responses\ChannelsResponse.cs" />
     <Compile Include="Broadcasts\Actions\CreateRatingDimension.cs" />
     <Compile Include="Broadcasts\Actions\DeleteRatingDimension.cs" />
+    <Compile Include="Broadcasts\Responses\MessageResponse.cs" />
+    <Compile Include="Broadcasts\Responses\MessagesResponse.cs" />
     <Compile Include="CloudSave\Actions\GameBuckets\CreateRatingDimension.cs" />
     <Compile Include="CloudSave\Actions\GameBuckets\DeleteRatingDimension.cs" />
     <Compile Include="CloudSave\Actions\GameBuckets\EditRatingDimension.cs" />
