--- a/ConstructServices.csproj
+++ b/ConstructServices.csproj
@@ -188,10 +188,10 @@
     <Compile Include="Leaderboards\Responses\PostScoreResponse.cs" />
     <Compile Include="Leaderboards\Responses\ShadowBanResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ratings\Actions\CreateRatingSlot.cs" />
-    <Compile Include="Ratings\Actions\DeleteRatingSlot.cs" />
-    <Compile Include="Ratings\Actions\EditRatingSlot.cs" />
-    <Compile Include="Ratings\Actions\GetRatingSlots.cs" />
+    <Compile Include="Ratings\Actions\CreateRatingDimension.cs" />
+    <Compile Include="Ratings\Actions\DeleteRatingDimension.cs" />
+    <Compile Include="Ratings\Actions\EditRatingDimension.cs" />
+    <Compile Include="Ratings\Actions\GetRatingDimensions.cs" />
     <Compile Include="Ratings\Actions\Rate.cs" />
     <Compile Include="Ratings\Objects\Rating.cs" />
     <Compile Include="Ratings\Objects\RatingAggregate.cs" />
